# flask-server

./: .env  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
flask_server/: app.py  db.py
flask_server/models/: list_model.py  todo_model.py  user_list_model.py  user_model.py
flask_server/routes/: auth.py  list.py  todo.py  todolist.py  user.py
flask_server/services/: list_service.py  todo_service.py  todolist_service.py  user_service.py
flask_server/utils/: get_user.py  hash_user_password.py  jwt.py
instance/: todolist.db
scripts/: init_db.py
tests/: test_app.py
tests/routes/: test_auth.py  test_list.py  test_todo.py  test_todolist.py  test_user.py
tests/services/: test_list_service.py  test_todo_service.py  test_todolist_service.py  test_user_service.py
tests/utils/: test_jwt.py
