[tool.poetry]
name = "flask-server"
version = "0.1.0"
description = ""
authors = ["Angelo Aldecoa <angelokn14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.29.0"
pylint = "^3.3.1"
python-dotenv = "^1.0.1"
pytest = "^8.3.3"
pytest-flask = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
dev = "flask run"
test = "pytest"